fix width overflow

--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@ body {
 	border: none;
 
 	background-color: black;
+	max-width: 100vw;
 }
 
 canvas{
